# LaRuche

./: .claude_ollama.md  .clio_memory.md  .clio_plan_saas.md  .env.example  .gitignore  .mcp.json  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO_SCRIPT.md  LICENSE  Makefile  README.md  STARTUP_GUIDE.md  SYSTEM_IDENTITY.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  ecosystem.config.js  install.sh  jest.config.cjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  ruche_config.json  tsconfig.json  turbo.json  vercel.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: agent_request.md  bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
.laruche/: config.json  patron-profile.json  registry.json
agents/: chimera_logging.py
agents/brain/: brain.py  pyproject.toml
agents/discovery/: mapper_agent.py  pyproject.toml
agents/evolution/: AGENT_PATTERN.md  auto_coder_bee.py  pyproject.toml  skill_factory.py
agents/executor/: executor_agent.py  pyproject.toml
agents/knowledge/: librarian_agent.py  pyproject.toml
agents/mcp-bridge/: __init__.py  mcp_bridge_agent.py  pyproject.toml
agents/memory/: episodes.jsonl  heuristics.jsonl  memory.py  memory_agent.py  pyproject.toml  state.json  world_state.json
agents/memory/schemas/: memory_schemas.py
agents/memory/services/: encryption_service.py
agents/memory/tests/: test_memory_agent.py
agents/orchestration/: __init__.py  orchestration_agent.py  pyproject.toml
agents/perception/: __init__.py  perception_agent.py  pyproject.toml
agents/vault/: README.md
agents/voice/: pyproject.toml  voice_agent.py
agents/voice/schemas/: voice_schemas.py
agents/voice/services/: microphone_service.py  stt_service.py  tts_service.py
agents/voice/tests/: test_voice_service.py
apps/dashboard/: .env.example  next.config.js  package.json  tsconfig.json
apps/ghost-daemon/: package.json
apps/queen/: package.json
config/: agents.yml  gpu-policy.yaml
dashboard/: server.js
dashboard/src/: App.jsx  index.css
data/: episodes.jsonl  goals.json  skill_evolution_registry.json
docs/: ARCHITECTURE.md  ARCHITECTURE_FULL.md  ARCHITECTURE_OPENCLAW_MODE.md  FRICTION_DIAGNOSIS.md  INTEGRATION.md  PLAN_PHASÉ.md  SKILL_FORMAT.md  STANDALONE_MODE.md  feature_card_conscience.md
hud/: main.js
hud/src/: App.jsx
infra/docker/: docker-compose.yml
infra/scripts/: migrate.sh
mcp_servers/: os_control_mcp.js  rollback_mcp.js  skill_factory_mcp.js  vault_mcp.js
scripts/: fast_install.sh  setup.sh  skill-manager.js  start.sh
skills/: registry.json
skills/core/: registry.json
skills/google-search/: SKILL.md
skills/open-app/: SKILL.md
skills/run-command/: SKILL.md
skills/run_command/: skill.js
skills/smart_click/: skill.js
skills/take-screenshot/: SKILL.md
skills/vault-memory/: SKILL.md
src/: cron_runner.js  db.js  janitor.js  memory_store.js  model_router.js  organic_input.js  queen.js  queen_oss.js  skill_evolution.js  skill_runner.js  token_sentinel.js  vision.py  worker_pool.py
src/agents/: agentBridge.js  agentLoop.js  agentLoop.ts  executor.js  intentPipeline.js  intentRouter.js  planner.js
src/api/: missions.js
src/learning/: missionMemory.js
src/llm/: callLLM.js  provider.ts
src/modes/: standalone.js
src/skills/: skillLoader.js  skillLoader.ts  skillRegistry.ts
src/tools/: toolRouter.js  toolRouter.ts
src/types/: mission.js
src/utils/: errorHandler.js  logger.js
src/worldmodel/: index.js
test/: smoke.js
(+107 files in other folders)
