[tool.uv.workspace]
members = [
  "agents/orchestration",
  "agents/perception",
  "agents/brain",
  "agents/executor",
  "agents/evolution",
  "agents/memory",
  "agents/mcp-bridge"
]

[project]
name = "chimera"
version = "1.0.0"
description = "Project Chimera — Distributed Cognitive OS"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]
