[tool.uv.workspace]
members = [
  "agents/orchestration",
  "agents/perception",
  "agents/brain",
  "agents/executor",
  "agents/evolution",
  "agents/memory",
  "agents/mcp-bridge"
]

[project]
name = "chimera"
version = "1.0.0"
description = "Project Chimera — Distributed Cognitive OS"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "black>=24.0",
  "flake8>=7.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
