[project]
name = "chimera-voice"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
# STT — Speech-to-Text via faster-whisper (Whisper quantisé, ~4x plus rapide)
# Télécharge automatiquement les modèles à la première utilisation
stt = [
  "faster-whisper>=1.0.0",
]

# TTS — Text-to-Speech via piper (voix neurales locales)
# Nécessite de télécharger un modèle de voix séparément
tts = [
  "piper-tts>=1.2.0",
]

# Microphone — enregistrement audio depuis le micro
# sounddevice est recommandé (plus simple que pyaudio)
microphone = [
  "sounddevice>=0.4.6",
  "numpy>=1.24",
]

# Alternative microphone (si sounddevice ne compile pas)
microphone-pyaudio = [
  "pyaudio>=0.2.14",
]

# Tout en une fois : STT + TTS + microphone
all = [
  "faster-whisper>=1.0.0",
  "piper-tts>=1.2.0",
  "sounddevice>=0.4.6",
  "numpy>=1.24",
]

# Dépendances de développement et tests
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]
